// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DropdownMenu Decorative renders correctly 1`] = `
<div>
  <button
    aria-controls="dropdown-menu-:ru:-panel"
    aria-expanded="true"
    aria-haspopup="true"
    class="css-l2mlc-BaseButton-Button"
    id="dropdown-menu-:ru:-button"
    type="button"
  >
    <span>
      <span
        class="css-oobk4c-Button"
      >
        Close
      </span>
      <span
        aria-live="assertive"
      />
    </span>
    <svg
      aria-hidden="true"
      class="css-sbsftc-Button"
      clip-rule="evenodd"
      fill-rule="evenodd"
      focusable="false"
      height="24"
      role="img"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="m18 15-6-6-6 6"
      />
    </svg>
  </button>
  <div
    aria-labelledby="dropdown-menu-:ru:-button"
    class="css-lbt6m6-boxStyles-boxStyles-Popover"
    id="dropdown-menu-:ru:-panel"
    role="menu"
    style="position: absolute; left: 0px; top: 0px; transform: translate(1px, 8px); max-height: -16px; max-width: calc(100vw - 2px);"
    tabindex="-1"
  >
    <div
      class="css-1we45ed-boxStyles-DropdownMenuItem"
      id="dropdown-menu-:ru:-item-:rv:"
      role="menuitem"
      tabindex="-1"
    >
      <div
        class="css-16gtkc6-boxStyles"
      >
        <svg
          aria-hidden="true"
          class="css-1g27iiq-DropdownMenuItem"
          clip-rule="evenodd"
          fill-rule="evenodd"
          focusable="false"
          height="24"
          role="img"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M4.5 19.177C6.743 17.962 9.423 17 12 17s5.257.962 7.5 2.177m-4.295-9.224a2.97 2.97 0 0 1-.382 1.445c-.25.444-.609.822-1.047 1.102a3.332 3.332 0 0 1-3.004.28 3.198 3.198 0 0 1-1.249-.888 3.018 3.018 0 0 1-.666-1.347 2.948 2.948 0 0 1 .075-1.489c.152-.483.425-.922.797-1.28a3.25 3.25 0 0 1 1.643-.845 3.335 3.335 0 0 1 1.856.175 3.18 3.18 0 0 1 1.44 1.135c.352.507.54 1.103.537 1.712Z"
          />
          <circle
            cx="12"
            cy="12"
            r="10.5"
          />
        </svg>
        <span
          class="css-1qsqsoz-boxStyles"
        >
          Profile
        </span>
      </div>
      <div
        class="css-azld6j-DropdownMenuItem"
      />
    </div>
    <div
      class="css-1we45ed-boxStyles-DropdownMenuItem"
      id="dropdown-menu-:ru:-item-:r10:"
      role="menuitem"
      tabindex="-1"
    >
      <div
        class="css-16gtkc6-boxStyles"
      >
        <svg
          aria-hidden="true"
          class="css-1g27iiq-DropdownMenuItem"
          clip-rule="evenodd"
          fill-rule="evenodd"
          focusable="false"
          height="24"
          role="img"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M22 6c0-1.1-.9-2-2-2H4c-1.1 0-2 .9-2 2m20 0v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6m20 0-10 7L2 6"
          />
        </svg>
        <span
          class="css-1qsqsoz-boxStyles"
        >
          Messages
        </span>
      </div>
      <div
        class="css-azld6j-DropdownMenuItem"
      >
        <span
          aria-hidden="true"
          class="css-14c2gvn-boxStyles-NotificationBadge"
        >
          99+
        </span>
        <span
          class="css-avudkd-VisuallyHidden"
        >
          , 99 plus unread
        </span>
      </div>
    </div>
    <hr
      aria-hidden="true"
      class="css-1th2zfi-Divider"
    />
    <div
      class="css-1we45ed-boxStyles-DropdownMenuItem"
      id="dropdown-menu-:ru:-item-:r11:"
      role="menuitem"
      tabindex="-1"
    >
      <div
        class="css-16gtkc6-boxStyles"
      >
        <svg
          aria-hidden="true"
          class="css-1g27iiq-DropdownMenuItem"
          clip-rule="evenodd"
          fill-rule="evenodd"
          focusable="false"
          height="24"
          role="img"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="12"
            cy="12"
            r="3"
          />
          <path
            d="M19.4 15a1.65 1.65 0 0 0 .33 1.82l.06.06a2 2 0 0 1 0 2.83 2 2 0 0 1-2.83 0l-.06-.06a1.65 1.65 0 0 0-1.82-.33 1.65 1.65 0 0 0-1 1.51V21a2 2 0 0 1-2 2 2 2 0 0 1-2-2v-.09A1.65 1.65 0 0 0 9 19.4a1.65 1.65 0 0 0-1.82.33l-.06.06a2 2 0 0 1-2.83 0 2 2 0 0 1 0-2.83l.06-.06a1.65 1.65 0 0 0 .33-1.82 1.65 1.65 0 0 0-1.51-1H3a2 2 0 0 1-2-2 2 2 0 0 1 2-2h.09A1.65 1.65 0 0 0 4.6 9a1.65 1.65 0 0 0-.33-1.82l-.06-.06a2 2 0 0 1 0-2.83 2 2 0 0 1 2.83 0l.06.06a1.65 1.65 0 0 0 1.82.33H9a1.65 1.65 0 0 0 1-1.51V3a2 2 0 0 1 2-2 2 2 0 0 1 2 2v.09a1.65 1.65 0 0 0 1 1.51 1.65 1.65 0 0 0 1.82-.33l.06-.06a2 2 0 0 1 2.83 0 2 2 0 0 1 0 2.83l-.06.06a1.65 1.65 0 0 0-.33 1.82V9a1.65 1.65 0 0 0 1.51 1H21a2 2 0 0 1 2 2 2 2 0 0 1-2 2h-.09a1.65 1.65 0 0 0-1.51 1z"
          />
        </svg>
        <span
          class="css-1qsqsoz-boxStyles"
        >
          Account settings
        </span>
      </div>
      <div
        class="css-azld6j-DropdownMenuItem"
      />
    </div>
  </div>
</div>
`;

exports[`DropdownMenu Links renders correctly 1`] = `
<div>
  <button
    aria-controls="dropdown-menu-:r16:-panel"
    aria-expanded="true"
    aria-haspopup="true"
    class="css-l2mlc-BaseButton-Button"
    id="dropdown-menu-:r16:-button"
    type="button"
  >
    <span>
      <span
        class="css-oobk4c-Button"
      >
        Open dropdown menu
      </span>
      <span
        aria-live="assertive"
      />
    </span>
    <svg
      aria-hidden="true"
      class="css-sbsftc-Button"
      clip-rule="evenodd"
      fill-rule="evenodd"
      focusable="false"
      height="24"
      role="img"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="m18 15-6-6-6 6"
      />
    </svg>
  </button>
  <div
    aria-labelledby="dropdown-menu-:r16:-button"
    class="css-lbt6m6-boxStyles-boxStyles-Popover"
    id="dropdown-menu-:r16:-panel"
    role="menu"
    style="position: absolute; left: 0px; top: 0px; transform: translate(1px, 8px); max-height: -16px; max-width: calc(100vw - 2px);"
    tabindex="-1"
  >
    <a
      class="css-1we45ed-boxStyles-DropdownMenuItem"
      href="/about"
      id="dropdown-menu-:r16:-item-:r17:"
      role="menuitem"
      tabindex="-1"
    >
      <div
        class="css-16gtkc6-boxStyles"
      >
        <span
          class="css-1qsqsoz-boxStyles"
        >
          About
        </span>
      </div>
      <div
        class="css-azld6j-DropdownMenuItem"
      />
    </a>
    <a
      class="css-1we45ed-boxStyles-DropdownMenuItem"
      href="/contact"
      id="dropdown-menu-:r16:-item-:r18:"
      role="menuitem"
      tabindex="-1"
    >
      <div
        class="css-16gtkc6-boxStyles"
      >
        <span
          class="css-1qsqsoz-boxStyles"
        >
          Contact
        </span>
      </div>
      <div
        class="css-azld6j-DropdownMenuItem"
      />
    </a>
  </div>
</div>
`;

exports[`DropdownMenu Radio Group renders correctly 1`] = `
<div>
  <button
    aria-controls="dropdown-menu-:r1i:-panel"
    aria-expanded="true"
    aria-haspopup="true"
    class="css-l2mlc-BaseButton-Button"
    id="dropdown-menu-:r1i:-button"
    type="button"
  >
    <span>
      <span
        class="css-oobk4c-Button"
      >
        Open dropdown menu
      </span>
      <span
        aria-live="assertive"
      />
    </span>
    <svg
      aria-hidden="true"
      class="css-sbsftc-Button"
      clip-rule="evenodd"
      fill-rule="evenodd"
      focusable="false"
      height="24"
      role="img"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="m18 15-6-6-6 6"
      />
    </svg>
  </button>
  <div
    aria-labelledby="dropdown-menu-:r1i:-button"
    class="css-lbt6m6-boxStyles-boxStyles-Popover"
    id="dropdown-menu-:r1i:-panel"
    role="menu"
    style="position: absolute; left: 0px; top: 0px; transform: translate(1px, 8px); max-height: -16px; max-width: calc(100vw - 2px);"
    tabindex="-1"
  >
    <div
      aria-labelledby="dropdown-menu-:r1i:-group-:r1j:"
      role="group"
    >
      <span
        class="css-u1nrgg-boxStyles"
        id="dropdown-menu-:r1i:-group-:r1j:"
      >
        Businesses
      </span>
      <div
        aria-checked="false"
        class="css-1e5dgxr-boxStyles-DropdownMenuItemRadio"
        id="item-1"
        role="menuitemradio"
      >
        <div
          class="css-o80hmi-boxStyles"
        >
          <span
            class="css-xf805a-boxStyles"
          >
            Antfix
          </span>
          <span
            class="css-1ntyv7o-boxStyles"
          >
            Sydney
          </span>
        </div>
        <div
          class="css-r8b31l-DropdownMenuItemRadio"
        />
      </div>
      <div
        aria-checked="true"
        class="css-llmtoq-boxStyles-DropdownMenuItemRadio"
        id="item-2"
        role="menuitemradio"
      >
        <div
          class="css-o80hmi-boxStyles"
        >
          <span
            class="css-1jywj6f-boxStyles"
          >
            Produce Fresh
          </span>
          <span
            class="css-1ntyv7o-boxStyles"
          >
            Brisbane
          </span>
        </div>
        <div
          class="css-r8b31l-DropdownMenuItemRadio"
        />
      </div>
      <div
        aria-checked="false"
        class="css-1e5dgxr-boxStyles-DropdownMenuItemRadio"
        id="item-3"
        role="menuitemradio"
      >
        <div
          class="css-o80hmi-boxStyles"
        >
          <span
            class="css-xf805a-boxStyles"
          >
            Organic Co
          </span>
          <span
            class="css-1ntyv7o-boxStyles"
          >
            Canberra
          </span>
        </div>
        <div
          class="css-r8b31l-DropdownMenuItemRadio"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`DropdownMenu renders correctly 1`] = `
<div>
  <button
    aria-controls="dropdown-menu-:r0:-panel"
    aria-expanded="true"
    aria-haspopup="true"
    class="css-l2mlc-BaseButton-Button"
    id="dropdown-menu-:r0:-button"
    type="button"
  >
    <span>
      <span
        class="css-oobk4c-Button"
      >
        Open dropdown menu
      </span>
      <span
        aria-live="assertive"
      />
    </span>
    <svg
      aria-hidden="true"
      class="css-sbsftc-Button"
      clip-rule="evenodd"
      fill-rule="evenodd"
      focusable="false"
      height="24"
      role="img"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="m18 15-6-6-6 6"
      />
    </svg>
  </button>
  <div
    aria-labelledby="dropdown-menu-:r0:-button"
    class="css-lbt6m6-boxStyles-boxStyles-Popover"
    id="dropdown-menu-:r0:-panel"
    role="menu"
    style="position: absolute; left: 0px; top: 0px; transform: translate(1px, 8px); max-height: -16px; max-width: calc(100vw - 2px);"
    tabindex="-1"
  >
    <div
      class="css-1we45ed-boxStyles-DropdownMenuItem"
      id="dropdown-menu-:r0:-item-:r1:"
      role="menuitem"
      tabindex="-1"
    >
      <div
        class="css-16gtkc6-boxStyles"
      >
        <span
          class="css-1qsqsoz-boxStyles"
        >
          Item 1
        </span>
      </div>
      <div
        class="css-azld6j-DropdownMenuItem"
      />
    </div>
    <div
      class="css-1we45ed-boxStyles-DropdownMenuItem"
      id="dropdown-menu-:r0:-item-:r2:"
      role="menuitem"
      tabindex="-1"
    >
      <div
        class="css-16gtkc6-boxStyles"
      >
        <span
          class="css-1qsqsoz-boxStyles"
        >
          Item 2
        </span>
      </div>
      <div
        class="css-azld6j-DropdownMenuItem"
      />
    </div>
    <div
      class="css-1we45ed-boxStyles-DropdownMenuItem"
      id="dropdown-menu-:r0:-item-:r3:"
      role="menuitem"
      tabindex="-1"
    >
      <div
        class="css-16gtkc6-boxStyles"
      >
        <span
          class="css-1qsqsoz-boxStyles"
        >
          Item 3
        </span>
      </div>
      <div
        class="css-azld6j-DropdownMenuItem"
      />
    </div>
  </div>
</div>
`;
